--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -12,7 +12,8 @@
         android:id="@+id/relativeLayout_first"
         android:layout_width="match_parent"
         android:layout_height="730dp"
-        android:padding="0dp">
+        android:padding="0dp"
+        android:background="@drawable/red_light">
 
         <ImageView
             android:id="@+id/pop"
@@ -25,52 +26,96 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="136dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tele-OP"
             android:textSize="38dp"
             android:translationX="150dp"
-            android:translationY="50dp" />
+            android:translationY="35dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:shadowDy="5"
+            android:shadowColor="@color/black"
+            android:shadowRadius="10"
+            android:tag="@string/no_change"/>
         <TextView
             android:id="@+id/team"
-            android:layout_width="136dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Team 0"
+            android:text="Team "
+            android:textColor="@color/white"
             android:textSize="26dp"
+            android:textStyle="bold"
             android:translationX="150dp"
-            android:translationY="88dp" />
+            android:translationY="85dp"
+            android:tag="@string/no_change"/>
 
         <Button
-
+            android:id="@+id/bg1"
+            android:layout_width="430dp"
+            android:layout_height="80dp"
+            android:backgroundTint="#E48B92"
+            android:text=""
+            android:clickable="false"
+            android:translationX="0dp"
+            android:translationY="655dp"
+            app:cornerRadius="15dp"
+            android:tag="@string/bg1"/>
+        <Button
+            android:id="@+id/bg2"
+            android:layout_width="378dp"
+            android:layout_height="50dp"
+            android:backgroundTint="#5cffffff"
+            android:text=""
+            android:clickable="false"
+            android:translationX="17dp"
+            android:translationY="670dp"
+            app:cornerRadius="20dp"
+            android:tag="@string/bg2"/>
+        <Button
             android:id="@+id/next"
-            android:layout_width="300px"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:backgroundTint="#73C2F0"
-            android:text="@string/next"
-            android:translationX="230dp"
-            android:translationY="600dp"
-            app:cornerRadius="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.547"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="110dp"
+            android:layout_height="50dp"
+            android:text="Next"
+            android:translationY="669.5dp"
+            android:translationX="285dp"
+            app:cornerRadius="20dp"
+            android:backgroundTint="#E02E3C"
+            android:textColor="@color/white"
+            android:shadowRadius="10"
+            android:shadowDy="5"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:tag="@string/team"/>
 
         <Button
-
             android:id="@+id/prev"
-            android:layout_width="300px"
+            android:layout_width="110dp"
+            android:layout_height="50dp"
+            android:text="Back"
+            android:translationX="17dp"
+            android:translationY="669.5dp"
+            android:textColor="@color/white"
+            app:cornerRadius="20dp"
+            android:backgroundTint="#E02E3C"
+            android:shadowRadius="10"
+            android:shadowDy="5"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:tag="@string/team"/>
+
+        <TextView
+            android:id="@+id/bottomTag"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:backgroundTint="#73C2F0"
-            android:text="Previous"
-            android:translationX="30dp"
-            android:translationY="600dp"
-            app:cornerRadius="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.547"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAlignment="center"
+            android:text="Red 1"
+            android:textSize="36dp"
+            android:textColor="#ff0000"
+            android:translationX="159dp"
+            android:translationY="669dp"
+            android:textStyle="bold"
+            android:tag="@string/team"/>
 
 
     </RelativeLayout>
