--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -9,11 +9,246 @@
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_height="730dp"
+        android:layout_height="1037dp"
         android:padding="0dp"
         android:background="@drawable/red_light"
         android:id="@+id/relativeLayoutFirst">
 
+        <TextView
+            android:id="@+id/robotTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Robot 🤖"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="145dp"
+            android:translationY="149dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <TextView
+            android:id="@+id/driveTrainTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Drive Train"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="40dp"
+            android:translationY="208dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <Button
+            android:id="@+id/driveTrainBacking"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="190dp"
+            android:translationY="198dp"
+            app:cornerRadius="20dp" />
+        <Spinner
+            android:id="@+id/driveTrain"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#000000"
+            android:backgroundTintMode="src_in"
+            android:spinnerMode="dropdown"
+            android:translationX="190dp"
+            android:translationY="198dp"
+            android:visibility="visible" />
+        <TextView
+            android:id="@+id/massTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Mass (lbs)"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="40dp"
+            android:translationY="277dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+
+        <Button
+            android:id="@+id/massBacking"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="190dp"
+            android:translationY="267dp"
+            app:cornerRadius="20dp" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/mass"
+            android:layout_width="144dp"
+            android:layout_height="50dp"
+            android:hint="Enter Here"
+            android:textColor="#000000"
+            android:textColorHint="#71797E"
+            android:maxLength="6"
+            android:inputType="numberDecimal"
+            android:translationX="218dp"
+            android:translationY="267dp"
+            android:tag="@string/no_change"/>
+        <TextView
+            android:id="@+id/climbTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Climb"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="40dp"
+            android:translationY="346dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <Button
+            android:id="@+id/climbBacking"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="190dp"
+            android:translationY="336dp"
+            app:cornerRadius="20dp" />
+        <Spinner
+            android:id="@+id/climb"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#000000"
+            android:backgroundTintMode="src_in"
+            android:spinnerMode="dropdown"
+            android:translationX="190dp"
+            android:translationY="336dp"
+            android:visibility="visible" />
+        <TextView
+            android:id="@+id/coralTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Coral 🧻"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="145dp"
+            android:translationY="421dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <TextView
+            android:id="@+id/coralScoringTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Scoring"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="40dp"
+            android:translationY="470dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+
+        <CheckBox
+            android:id="@+id/L1"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:textAlignment="center"
+            android:text="L1"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:translationX="142dp"
+            android:translationY="470dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1"
+            android:paddingLeft="-10dp"/>
+        <CheckBox
+            android:id="@+id/L2"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:textAlignment="center"
+            android:text="L2"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="204dp"
+            android:translationY="470dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1"
+            android:paddingLeft="-10dp"/>
+        <CheckBox
+            android:id="@+id/L3"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:textAlignment="center"
+            android:text="L3"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="265dp"
+            android:translationY="470dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1"
+            android:paddingLeft="-10dp"/>
+        <CheckBox
+            android:id="@+id/L4"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:textAlignment="center"
+            android:text="L4"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="326dp"
+            android:translationY="470dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1"
+            android:paddingLeft="-10dp"/>
+        <TextView
+            android:id="@+id/coralIntakeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Coral Intake"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="40dp"
+            android:translationY="529dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <Button
+            android:id="@+id/coralIntakeBacking"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="190dp"
+            android:translationY="519dp"
+            app:cornerRadius="20dp" />
+        <Spinner
+            android:id="@+id/coralIntake"
+            android:layout_width="200dp"
+            android:layout_height="49dp"
+            android:backgroundTint="#000000"
+            android:backgroundTintMode="src_in"
+            android:spinnerMode="dropdown"
+            android:translationX="190dp"
+            android:translationY="519dp"
+            android:visibility="visible" />
         <TextView
             android:id="@+id/notesHelp"
             android:layout_width="wrap_content"
@@ -23,8 +258,9 @@
             android:textSize="24dp"
             android:textColor="#000000"
             android:translationX="115dp"
-            android:translationY="560dp"
+            android:translationY="837dp"
             android:textStyle="bold"/>
+
         <TextView
             android:id="@+id/limitHelp"
             android:layout_width="wrap_content"
@@ -34,7 +270,7 @@
             android:textSize="24dp"
             android:textColor="#000000"
             android:translationX="190dp"
-            android:translationY="630dp"
+            android:translationY="925dp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/analyzerHelp"
@@ -45,7 +281,7 @@
             android:textSize="24dp"
             android:textColor="#000000"
             android:translationX="370dp"
-            android:translationY="630dp"
+            android:translationY="925dp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/characterLimit"
@@ -55,7 +291,7 @@
             android:text="Character Limit: 0/150"
             android:textSize="15dp"
             android:translationX="30dp"
-            android:translationY="635dp" />
+            android:translationY="930dp" />
         <TextView
             android:id="@+id/analyzerScore"
             android:layout_width="330dp"
@@ -64,7 +300,7 @@
             android:text="Analyzer Score: 0.0"
             android:textSize="15dp"
             android:translationX="230dp"
-            android:translationY="635dp" />
+            android:translationY="930dp" />
         <TextView
             android:id="@+id/notesTitle"
             android:layout_width="71dp"
@@ -72,7 +308,7 @@
             android:text="Notes"
             android:textSize="24dp"
             android:translationX="45dp"
-            android:translationY="560dp"
+            android:translationY="837dp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:shadowColor="@color/black" />
@@ -86,7 +322,7 @@
             android:tag=""
             android:text=""
             android:translationX="17dp"
-            android:translationY="589dp"
+            android:translationY="874dp"
             app:cornerRadius="20dp" />
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input"
@@ -98,7 +334,7 @@
             android:maxLength="150"
             android:inputType="text"
             android:translationX="45dp"
-            android:translationY="588dp"
+            android:translationY="874dp"
             android:tag="@string/no_change"/>
         <Button
             android:id="@+id/bg1"
@@ -108,7 +344,7 @@
             android:text=""
             android:clickable="false"
             android:translationX="0dp"
-            android:translationY="655dp"
+            android:translationY="959dp"
             app:cornerRadius="15dp"
             android:tag="@string/bg1"/>
 
@@ -120,7 +356,7 @@
             android:text=""
             android:clickable="false"
             android:translationX="17dp"
-            android:translationY="670dp"
+            android:translationY="973dp"
             app:cornerRadius="20dp"
             android:tag="@string/bg2"/>
 
@@ -133,7 +369,7 @@
             android:textSize="36dp"
             android:textColor="#ff0000"
             android:translationX="159dp"
-            android:translationY="669dp"
+            android:translationY="973dp"
             android:textStyle="bold"
             android:tag="@string/team"/>
 
@@ -142,7 +378,7 @@
             android:layout_width="110dp"
             android:layout_height="50dp"
             android:text="Next"
-            android:translationY="669.5dp"
+            android:translationY="973dp"
             android:translationX="285dp"
             app:cornerRadius="20dp"
             android:backgroundTint="#E02E3C"
@@ -180,11 +416,6 @@
             android:translationX="0dp"
             android:translationY="0dp"/>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
 
 
         <TextView
@@ -205,7 +436,7 @@
             android:layout_height="50dp"
             android:text="Back"
             android:translationX="17dp"
-            android:translationY="669.5dp"
+            android:translationY="973dp"
             android:textColor="@color/white"
             app:cornerRadius="20dp"
             android:backgroundTint="#E02E3C"
